feat: add bet logic
